[package]
name = "tinynet"
version = "0.1.0"
edition = "2024"

[dependencies]
defmt = { version = "1.0", optional = true }
log = { version = "0.4", optional = true }

crc = "3.2"
cobs = { version = "0.3", default-features = false }
bitfields = { version = "0.13", default-features = false }

embedded-io-async = "0.6"

serde = { version = "1.0", features = ["derive"], default-features = false }
postcard = { version = "1.0", features = ["experimental-derive"] }

embassy-sync = "0.6"
embassy-time = "0.4"
embassy-futures = "0.1.1"

[features]
defmt = ["dep:defmt", "postcard/use-defmt"]
log = ["dep:log"]
