[package]
name = "tinynet"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85"

authors = ["Wouter Geraedts <git@woutergeraedts.nl>"]
categories = ["embedded", "no-std::no-alloc", "no-std"]
keywords = ["networking"]
description = "Stack usage tools for Cortex-M processors"

readme = "README.md"

[dependencies]
defmt = { version = "1.0", optional = true }
log = { version = "0.4", optional = true }

crc = "3.2"
cobs = { version = "0.4", default-features = false }
bitfields = { version = "1.0", default-features = false }

embedded-io-async = "0.6"

postcard = { version = "1.1", features = [
    "experimental-derive",
], default-features = false }

serde = { version = "1.0", features = ["derive"], default-features = false }
embassy-sync = "0.7"
embassy-time = "0.5"
embassy-futures = "0.1.1"

[features]
defmt = ["dep:defmt"]
log = ["dep:log"]
