[package]
name = "test_application"
version = "0.1.0"
edition = "2024"

[dependencies]
tinynet = { path = "../..", features = ["log"] }

embedded-io-async = "0.6"

embassy-sync = "0.6.2"
embassy-futures = "0.1.1"

log = { version = "0.4" }
pretty_env_logger = "0.5.0"

async-std = { version = "1.13", features = ["attributes"] }